Bug #350423 --> the remote content bar image has the wrong size due to changes to console-toolbar.png in toolkit

--- a/mozilla/mail/themes/pinstripe/mail/primaryToolbar.css
+++ b/mozilla/mail/themes/pinstripe/mail/primaryToolbar.css
@@ -499,7 +499,7 @@ toolbar[iconsize="small"] #button-next[disabled] {
 
 #remoteContentImage {
   list-style-image: url("chrome://global/skin/console/console-toolbar.png");
-  -moz-image-region: rect(0px, 32px, 32px, 0px);
+  -moz-image-region: rect(0px, 24px, 24px, 0px);
 }
 
 #remoteContentBar {
